Update add JS and fix all JS linters

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <h1>Linters test</h1>
       <p>This is just atest file</p>
     </article>
+    <section class="lists"></section>
   </main>
 </body>
 </html>
